--- a/src/partials/hero-header-section.html
+++ b/src/partials/hero-header-section.html
@@ -44,13 +44,15 @@
            
           </svg>
       </button>
-    <button class="btn-nav raise" type="button"><span class="raise">
+    <button class="btn-nav raise"  data-modal-open  type="button">
       Buy now
       <svg class="btn-nav__svg" width="4px" height="8px">
         <use href="./images/sprite.svg#icon-Vector-1"></use>
-      </svg></span>
+      </svg>
     </button>
+    
     </div>
+    
   </div>
 
 
@@ -99,11 +101,11 @@
       </button>
     </div>
 
-    <picture class="hero__pictures">
+    <picture class="hero__pictures milk-shake">
       <source media="screen and (min-width: 768px) and (max-width: 1279px)"
         srcset="images\milk-cup-t.png 1x, images\milk-cup-t@2x.png 2x" />
       <source media="screen and (min-width:1280px)" srcset="images\milk-cup-d.png 1x, images\milk-cup-d@2x.png 2x" />
-      <img class="hero__pictures-milk" width="270" src="./images/milk-cup-d.png" alt="milk cup" />
+      <img class="hero__pictures-milk milk-shake " width="270" src="./images/milk-cup-d.png" alt="milk cup" />
     </picture>
 
     <picture class="hero__pictures">
