--- a/src/sass/components/_common.scss
+++ b/src/sass/components/_common.scss
@@ -56,7 +56,17 @@ height: 26px;
 }
 
 
+.milk-shake:hover,
+.milk-shake:focus {
+  animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+}
 
+.roll {
+animation-name: roll;
+animation-duration: 2s;
+animation-timing-function: ease-in-out;
+animation-iteration-count: 1;
+}
 //  .appearance {
 //   animation: appearance 5s ease 0s 1 normal forwards;
 //  }
