--- a/src/sass/utils/_keyframes.scss
+++ b/src/sass/utils/_keyframes.scss
@@ -79,6 +79,18 @@
   100% { transform: translateY(0); }
 }
 
+@keyframes roll {
+  0% {
+    transform: translateX(-800px) rotate(0deg);
+  }
+  50% {
+    transform: translateX(300px) rotate(180deg);
+  }
+  100% {
+    transform: translatex(0px) rotate(360deg);
+  }
+}
+
 // button::before {
 //   content: '';
 //   pointer-events: none;
