--- a/src/sass/components/_hero-header-section.scss
+++ b/src/sass/components/_hero-header-section.scss
@@ -40,7 +40,7 @@ header {
 
 .hero {
   position: relative;
-  &__title {
+    &__title {
     font-family: 'Titan One';
     font-size: 26px;
 line-height: 30px;
@@ -93,6 +93,7 @@ line-height: 30px;
       height: 344px;
       bottom: 80px;
     right: 10px;
+    overflow: hidden;
     }
   }
   &__pictures-milk,
@@ -267,6 +268,7 @@ line-height: 30px;
     text-align: right;
     color: $whiteColor;
     display: flex;
+    text-transform: lowercase;
     flex-direction: column;
   }
   &__number-list-nr {
@@ -314,13 +316,14 @@ line-height: 30px;
     position: absolute;
     bottom: 16px;
     width: 152px;
+    z-index: 7;
   }
 
   &__pictures {
     z-index: 1;
     &::after {
       content: '';
-      background-color: #ffa5ba;
+      background-color: $secondaryColor;
       z-index: 2;
       border-radius: 50%;
       position: absolute;
@@ -328,7 +331,7 @@ line-height: 30px;
       height: 335px;
       bottom: 35px;
       right: 189px;
-    }
+       }
   }
 }
 }
@@ -498,6 +501,9 @@ line-height: 30px;
       text-align: right;
       color: $whiteColor;
       display: flex;
+      font-family: 'DM Sans';
+      font-style: normal;
+      font-weight: 400;
       flex-direction: column;
     }
     &__number-list-nr {
@@ -550,6 +556,7 @@ line-height: 30px;
       position: absolute;
       bottom: 60px;
       width: 213px;
+      z-index: 7;
     }
 
     &__pictures {
@@ -564,6 +571,10 @@ line-height: 30px;
         height: 534px;
         bottom: 72px;
         right: 139px;
+        animation-name: roll;
+animation-duration: 4s;
+animation-timing-function: ease-in-out;
+animation-iteration-count: 1;
       }
     }
   }
