--- a/src/sass/components/_buy-now-modal.scss
+++ b/src/sass/components/_buy-now-modal.scss
@@ -226,12 +226,13 @@
 @media (max-width: 320px) {
     .buy-modal-inner-div {
         width: unset;
+        border-radius: none;
     }
     .buy-modal {
         width: 100%;
         top: 0;
         right: 0;
-        border-radius: 0;
+        border-radius: none;
         &__grid {
           flex-direction: column;
           flex-wrap: wrap;
