--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,8 +1,8 @@
-<section class="gallery">
-    <div class="gallery__container">
+<section class="gallery" id="footer">
+    <div class="gallery__container container">
         <h2 class="gallery__title">Ice-cream's gallery</h2>
         <ul class="gallery__list">
-            <li class="gallery__list-column">
+            <li class="gallery__list-column-first">
                 <picture>
                     <source 
                         media="screen and (max-width:767px)" 
@@ -18,7 +18,7 @@
                     alt="" >
                 </picture>
             </li>
-            <li class="gallery__list-column-first">
+            <li class="gallery__list-column-second">
                 <picture>
                     <source 
                         media="screen and (max-width:767px)" 
@@ -48,7 +48,7 @@
                     alt="">
                 </picture>
             </li>
-            <li class="gallery__list-column-second">
+            <li class="gallery__list-column-third">
                 <picture>
                     <source 
                         media="screen and (max-width:767px)" 
@@ -78,7 +78,7 @@
                     alt="">
                 </picture>
             </li>
-            <li class="gallery__list-column-third">
+            <li class="gallery__list-column-fourth">
                 <picture>
                     <source 
                         media="screen and (max-width:767px)" 
@@ -108,7 +108,7 @@
                     alt="">
                 </picture>
             </li>
-            <li class="gallery__list-column-fourth">
+            <li class="gallery__list-column-fifth">
                 <picture>
                 <source 
                     media="screen and (max-width:767px)" 
@@ -138,7 +138,7 @@
                     alt="">
                 </picture>
             </li>
-            <li class="gallery__list-column-fifth">
+            <li class="gallery__list-column-sixth">
                <picture>
                 <source 
                     media="screen and (max-width:767px)" 
