--- a/src/sass/components/_header-hero.scss
+++ b/src/sass/components/_header-hero.scss
@@ -122,6 +122,7 @@
     background: $accent-color;
     border-radius: 20px;
     border: none;
+    cursor: pointer;
   }
   &__btn--white {
     color: $accent-color;
@@ -152,22 +153,22 @@
   display: flex;
   flex-direction: row;
   margin: 40px 0 0 0;
-  &__img {
-    animation: animate-milk 7500ms infinite 3000ms;
-    @keyframes animate-milk {
-      0% {
-        transform: scale(1);
-      }
+  // &__img {
+  //   animation: animate-milk 7500ms infinite 3000ms;
+  //   @keyframes animate-milk {
+  //     0% {
+  //       transform: scale(1);
+  //     }
 
-      50% {
-        transform: scale(1.15);
-      }
+  //     50% {
+  //       transform: scale(1.15);
+  //     }
 
-      100% {
-        transform: scale(1);
-      }
-    }
-  }
+  //     100% {
+  //       transform: scale(1);
+  //     }
+  //   }
+  // }
 
   &__side {
     width: 200px;
