--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -18,6 +18,11 @@
 // @import 'swiper/css/navigation';
 // @import 'swiper/css/pagination';
 
+
+html{
+  scroll-behavior: smooth;
+}
+
 .container {
   margin: 0 auto;
   min-width: 320px;
