--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -1,8 +1,9 @@
 .about-section {
   background: $priority-bg-color;
   background-repeat: no-repeat;
-  padding: 60px 16px 16px 20px;
+  padding: 60px 16px 16px 0px;
   &__subtitle {
+    
     font-family: 'Titan One';
     font-style: normal;
     font-weight: 400;
@@ -39,6 +40,7 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
+    padding-left:75px;
   }
   &__main-text {
     font-family: 'DM Sans';
@@ -87,26 +89,26 @@
   }
 }
 
-.about-section__item-image {
-  animation: rotating 10000ms linear infinite;
-}
+// .about-section__item-image {
+//   animation: rotating 10000ms linear infinite;
+// }
 
-@keyframes rotating {
-  0% {
-    transform: rotate(0deg);
-  }
+// @keyframes rotating {
+//   0% {
+//     transform: rotate(0deg);
+//   }
 
-  33% {
-    transform: rotate(30deg);
-  }
+//   33% {
+//     transform: rotate(30deg);
+//   }
 
-  66% {
-    transform: rotate(-30deg);
-  }
-  100% {
-    transform: rotate(0deg);
-  }
-}
+//   66% {
+//     transform: rotate(-30deg);
+//   }
+//   100% {
+//     transform: rotate(0deg);
+//   }
+// }
 
 @media screen and (max-width: 767px) {
   .about-section {
@@ -152,8 +154,19 @@
 }
 
 @media screen and (min-width: 1199px) {
-  .about-section__title {
-    animation: animate150 15000ms infinite 1000ms;
+  .about-section__title:hover {
+    animation: flicker 0.5s ease-in-out infinite alternate;
+    @keyframes flicker {
+      0% {
+        opacity: 1;
+        text-shadow: 10px 10px 10px rgb(216, 76, 123);
+      }
+      100% {
+        opacity: 1;
+        text-shadow: 9px 10px 20px rgb(220, 79, 126);
+      }
+    }
+    // cursor: pointer;
   }
 }
 
