--- a/src/sass/components/_buy-now-modal.scss
+++ b/src/sass/components/_buy-now-modal.scss
@@ -20,6 +20,7 @@
   align-items: center;
   gap: 10px;
   padding: 15px 15px 30px 15px;
+  transform: translateY(50px);
 }
 .modal {
   position: absolute;
@@ -51,7 +52,7 @@
     line-height: 44px;
     letter-spacing: 0.04em;
     text-transform: uppercase;
-    color: $whitecolor;
+    color: $subtitle-color;
     margin: 30px 0 0 0;
     &--red {
       color: $accent-color;
@@ -82,7 +83,7 @@
     font-weight: 700;
     font-size: 16px;
     line-height: 186%;
-    color: $button-hover-color;
+    color: $subtitle-color;
   }
   &__img {
     margin: 20px;
