1- redenumire container+ adaugare margini figma

--- a/src/sass/_howitsmade.scss
+++ b/src/sass/_howitsmade.scss
@@ -14,6 +14,7 @@ h3 {
   width: 220px;
   color: $gray-color;
   display: none;
+  margin-left: 20px;
 }
 
 .made {
@@ -57,6 +58,7 @@ h3 {
   &__image {
     width: 280px;
     padding-bottom: 40px;
+    margin-left: 20px;
   }
 
   &__text {
@@ -80,6 +82,7 @@ h3 {
     align-items: center;
     text-align: center;
     color: $primary-color;
+    margin-left: 20px;
   }
 
   &__background-container {
@@ -89,6 +92,7 @@ h3 {
     width: 280px;
     height: 133px;
     top: 127px;
+    margin-left: 20px;
   }
 }
 
@@ -100,6 +104,7 @@ h3 {
   padding-top: 40px;
   width: 220px;
   padding-bottom: 40px;
+  margin-left: 20px;
 }
 
 .made-section__text--text2 {
@@ -111,6 +116,7 @@ h3 {
   font-size: 12px;
   line-height: 162%;
   margin-bottom: 15px;
+  margin-left: 20px;
 }
 
 .made-section__text--text3 {
@@ -122,13 +128,16 @@ h3 {
   font-size: 12px;
   line-height: 162%;
   margin-bottom: 20px;
+  margin-left: 20px;
 }
 
-.container {
+// .container {
+//   width: 320px;
+//   margin: 0px auto;
+// }
+.how-its-made-container {
   width: 320px;
   margin: 0px auto;
-}
-.how-its-made-container {
   background-color: $secondary-background-color;
 }
 
@@ -141,6 +150,7 @@ h3 {
     padding: 0px;
     padding-bottom: 209px;
     gap: 32px;
+    margin-left: 20px;
   }
 
   &__item {
@@ -177,7 +187,7 @@ h3 {
 }
 
 @media screen and (min-width: 768px) and (max-width: 1279px) {
-  .container {
+  .how-its-made-container {
     width: 768px;
     margin: 0px auto;
     background-color: $secondary-background-color;
@@ -208,10 +218,12 @@ h3 {
     &__button {
       font-size: 16px;
       line-height: 21px;
+      margin-left: 0px;
     }
     &__image {
       width: 336px;
       align-self: center;
+      margin-left: 32px;
     }
   }
 
@@ -221,6 +233,7 @@ h3 {
     font-size: 14px;
     line-height: 176%;
     width: 334px;
+    margin-left: 0px;
   }
 
   #how-button__text {
@@ -229,6 +242,7 @@ h3 {
     font-size: 14px;
     line-height: 176%;
     letter-spacing: 0.04em;
+    margin-left: 0px;
   }
 
   .quantity {
@@ -254,6 +268,7 @@ h3 {
       display: flex;
       flex-direction: row;
       gap: 4px;
+      margin-left: 32px;
     }
 
     &__item--padding {
@@ -263,7 +278,7 @@ h3 {
 }
 
 @media screen and (min-width: 1280px) {
-  .container {
+  .how-its-made-container {
     width: 1200px;
     margin: 0px auto;
     background-color: $secondary-background-color;
@@ -296,6 +311,7 @@ h3 {
     &__image {
       width: 501px;
       align-items: center;
+      margin-left: 16px;
     }
 
     &__text--text1 {
@@ -303,11 +319,13 @@ h3 {
       line-height: 176%;
       width: 463px;
       padding-top: 90px;
+      margin-left: 0px;
     }
 
     &__button {
       font-size: 16px;
       line-height: 21px;
+      margin-left: 0px;
     }
   }
 
@@ -316,6 +334,7 @@ h3 {
     font-size: 14px;
     line-height: 194%;
     width: 463px;
+    margin-left: 0px;
   }
 
   .made-section__text--text3 {
@@ -327,6 +346,7 @@ h3 {
     width: 463px;
     font-size: 14px;
     line-height: 194%;
+    margin-left: 0px;
   }
 
   .quantity {
@@ -349,6 +369,7 @@ h3 {
     &__list {
       flex-direction: row;
       gap: 60px;
+      margin-left: 20px;
     }
 
     &__item--margin {
