--- a/src/sass/components/_about-modal.scss
+++ b/src/sass/components/_about-modal.scss
@@ -58,3 +58,9 @@
   visibility: hidden;
   opacity: 0;
 }
+
+@media screen and (min-width: 320px) {
+  .about-modal-inner-div {
+  transform: translateX(-10px);
+  width: 300px;
+  }}
