--- a/src/sass/components/_header-hero.scss
+++ b/src/sass/components/_header-hero.scss
@@ -234,7 +234,7 @@
 @media (max-width: 768px) and (min-width: 321px) {
   .header-section {
     padding: 0 16px;
-    background: #ffb8ca;
+    background: $hero-bg;
     background-repeat: no-repeat;
     background-image: url('../images/header/header-icecream-t.png'),
       url('../images/header/elipse-t.png');
@@ -346,9 +346,7 @@
         line-height: 150%;
       }
       &__img {
-      display:block;
-      width: 152px;
-      padding-bottom: 16px;
+        width: 152px;
       }
     }
     .sell-point {
@@ -372,47 +370,49 @@
       }
     }
   }
-
+}
 @media (max-width: 320px) {
   .header-section {
     overflow-y: hidden;
     background: #ffb8ca;
     background-repeat: no-repeat;
-    background-image:  url("../images/header/icecream-m.png"), url("../images/header/elipse-m.png");
-    background-position:  top 100% right 30%, top 60% right 0%;
+    background-image: url('../images/header/icecream-m.png'),
+      url('../images/header/elipse-m.png');
+    background-position: top 100% right 30%, top 60% right 0%;
   }
   @media (min-device-pixel-ratio: 2),
     (-webkit-min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
     .header-section {
-    background-position:  top 100% right 30%, top 60% right 0%;
-    background-image: url("../images/header/icecream-m@2x.png") 171px, url("../images/header/elipse-m@2x.png");
+      background-position: top 100% right 30%, top 60% right 0%;
+      background-image: url('../images/header/icecream-m@2x.png') 171px,
+        url('../images/header/elipse-m@2x.png');
     }
   }
   .header {
     padding: 8px 0 0 0;
-  &__icon{
+    &__icon {
       margin-right: 41px;
       padding: 0;
     }
     &__menu-btn {
       display: initial;
     }
-  &__buy-btn{
+    &__buy-btn {
       display: none;
     }
   }
-.hero{
+  .hero {
     padding: 151px 0 158px 0;
-  &__title{
+    &__title {
       font-size: 26px;
       line-height: 30px;
     }
     &__img,
     .sell-point,
-  .info{
-  display:none;
+    .info {
+      display: none;
     }
   }
   .no-display {
