--- a/src/sass/components/_advantages-section.scss
+++ b/src/sass/components/_advantages-section.scss
@@ -62,7 +62,7 @@
     text-transform: uppercase;
     color: $primaryColor;
     animation: flip 5s infinite;
-    animation-delay: calc(.2s * var(--i))
+    animation-delay: calc(0.2s * var(--i));
   }
 }
 
