--- a/src/sass/components/_common.scss
+++ b/src/sass/components/_common.scss
@@ -7,12 +7,11 @@
   margin-inline-start: 0px;
   margin-inline-end: 0px;
   padding-inline-start: 0;
-  
 }
 
 body {
   font-family: 'DM Sans', sans-serif;
-  font-weight: 400px;
+  font-weight: 400;
   font-style: normal;
   font-size: 14px;
 }
@@ -35,8 +34,8 @@ body {
 }
 
 .arrow-button--mod {
-width: 26px;
-height: 26px;
+  width: 26px;
+  height: 26px;
 }
 
 .unstyled-list {
@@ -55,17 +54,16 @@ height: 26px;
   animation-fill-mode: forwards;
 }
 
-
 .milk-shake:hover,
 .milk-shake:focus {
   animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
 }
 
 .roll {
-animation-name: roll;
-animation-duration: 2s;
-animation-timing-function: ease-in-out;
-animation-iteration-count: 1;
+  animation-name: roll;
+  animation-duration: 2s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: 1;
 }
 //  .appearance {
 //   animation: appearance 5s ease 0s 1 normal forwards;
@@ -77,15 +75,6 @@ animation-iteration-count: 1;
 //   animation: appearance 3s ease 0s 1 normal forwards;
 //  }
 
-// .bounce:hover,
-// .bounce:focus {
-//   animation-name: bounce-left;
-//   animation-duration:2s;
-//   animation-timing-function: ease;
-//   animation-delay: 0s;
-//   animation-iteration-count: 1;
-// }
-
 @media screen and (min-width: 768px) {
   .container {
     width: 768px;
@@ -96,5 +85,4 @@ animation-iteration-count: 1;
   .container {
     width: 1280px;
   }
- 
 }
