--- a/src/partials/advantages-section.html
+++ b/src/partials/advantages-section.html
@@ -3,24 +3,25 @@
     <h2 hidden class="advantages__title">Advantages</h2>
     <ul class="advantages__list unstyled-list">
       <li class="advantages__list-item advantages__list-item--mod1">
-        
-          <div>
-          <span class="advantages__list-number" style="--i:1">7</span><span class="advantages__list-number" style="--i:2">2</span><span class="advantages__list-number" style="--i:3">1</span>
-          </div>
-          <p class="advantages__list-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        <div>
+          <span class="advantages__list-number" style="--i:1">7</span><span class="advantages__list-number"
+            style="--i:2">2</span><span class="advantages__list-number" style="--i:3">1</span>
+        </div>
+        <p class="advantages__list-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
         </p>
       </li>
       <li class="advantages__list-item advantages__list-item--mod2">
-        
-          <div>
-          <span class="advantages__list-number" style="--i:1">1</span><span class="advantages__list-number" style="--i:2">6</span>
-          </div>
-          <p class="advantages__list-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        <div>
+          <span class="advantages__list-number" style="--i:1">1</span><span class="advantages__list-number"
+            style="--i:2">6</span>
+        </div>
+        <p class="advantages__list-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
         </p>
       </li>
       <li class="advantages__list-item advantages__list-item--mod3">
-             <div>
-          <span class="advantages__list-number" style="--i:1">8</span><span class="advantages__list-number" style="--i:2">4</span>
+        <div>
+          <span class="advantages__list-number" style="--i:1">8</span><span class="advantages__list-number"
+            style="--i:2">4</span>
         </div>
         <p class="advantages__list-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
         </p>
