--- a/src/sass/components/_locations.scss
+++ b/src/sass/components/_locations.scss
@@ -18,6 +18,7 @@
   @media screen and (min-width: 768px) {
     background: linear-gradient(#fffdfd 35%, #f6d3d3 50%, #fff5f6 90%);
     margin-top:-70px;
+    padding-bottom: 121px;
   }
 
   @media screen and (min-width: 1280px) {
