--- a/src/sass/components/_buy-now-modal.scss
+++ b/src/sass/components/_buy-now-modal.scss
@@ -230,6 +230,7 @@
 @media (max-width: 320px) {
    .buy-modal-inner-div {
         width: unset;
+        border-radius: 0;
     }
    .buy-modal {
         width: 100%;
@@ -247,7 +248,13 @@
        &__label {
         width: 250px;
       }
+     &__grid{
+      flex-direction: row;
+     }
+     &__img{
+      width: 50px;
+      margin:10px;
      }
     }
-
+  }
 
