--- a/src/sass/components/_header-hero.scss
+++ b/src/sass/components/_header-hero.scss
@@ -375,7 +375,7 @@
 
 @media (max-width: 320px) {
   .header-section {
-    overflow-y: hidden;
+    // overflow-y: hidden;
     background: #ffb8ca;
     background-repeat: no-repeat;
     background-image: url('../images/header/icecream-m.png'),
