--- a/src/sass/components/_locations.scss
+++ b/src/sass/components/_locations.scss
@@ -13,6 +13,10 @@
   text-decoration: none;
 }
 
+.locations-list{
+  padding-left:15px;
+}
+
 .locations {
   background: linear-gradient(#fffdfd 15%, #f6d3d3 40%, #fff5f6 80%);
   @media screen and (min-width: 768px) {
@@ -237,6 +241,7 @@
   @media screen and (max-width: 768px) {
     flex-direction: column;
     padding-top: 60px;
+    padding-bottom: 40px;
   }
   &__location {
     width: 198px;
