--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -176,8 +176,8 @@
     }
   }
   .menu-container {
-/*   visibility: hidden;
-  margin-right: 106px; */
+  // visibility: hidden;
+  // margin-right: 106px;
   position: fixed;
   top: 0;
   right: 0;
