--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -25,7 +25,7 @@ html{
 
 .container {
   margin: 0 auto;
-  min-width: 320px;
+  min-width: 300px;
   max-width: 1250px;
 }
 
@@ -40,5 +40,5 @@ h4 {
   margin-block-end: 0px;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
-  padding-inline-start: 0px;
+  // padding-inline-start: 0px;
 }
