--- a/src/sass/components/_locations.scss
+++ b/src/sass/components/_locations.scss
@@ -80,9 +80,9 @@
     }
 
     @media screen and (min-width: 768px) {
-      flex-basis: calc(100% / 3 - 20px);
+      // flex-basis: calc(100% / 3 - 20px);
 
-      padding: 50px 31px;
+      // padding: 50px 31px;
     }
 
     @media screen and (min-width: 1200px) {
