--- a/src/sass/components/_locations.scss
+++ b/src/sass/components/_locations.scss
@@ -246,6 +246,7 @@
   &__location {
     width: 198px;
     height: 44px;
+    cursor: pointer;
     background: $hover-color;
     border-radius: 22px;
     font-family: 'DM Sans';
@@ -268,6 +269,7 @@
   &__franchise {
     width: 198px;
     height: 44px;
+    cursor: pointer;
     background: $whitecolor;
     border-radius: 22px;
     font-family: 'DM Sans';
