--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -1,4 +1,5 @@
 .about-section {
+  // cursor: url('/src/images/about/ice.svg');
   background: $priority-bg-color;
   background-repeat: no-repeat;
   padding: 60px 16px 16px 0px;
@@ -70,6 +71,7 @@
     }
   }
   button {
+    cursor: pointer;
     width: 176px;
     height: 44px;
     background: $whitecolor;
@@ -81,6 +83,7 @@
     font-size: 14px;
     line-height: 18px;
     color: $accent-color;
+    
     &:hover {
       background: $button-hover-color;
     }
@@ -221,3 +224,4 @@
     transform: scale(1);
   }
 }
+
