--- a/src/sass/components/_buy-now-modal.scss
+++ b/src/sass/components/_buy-now-modal.scss
@@ -198,11 +198,12 @@
     }
   }
 }
-@media (max-width: 768px) and (min-width: 321px) {
+@media (max-width: 768px) and (min-width: 389px) {
 .buy-modal{
 
     &__grid {
       gap: 3px;
+      padding:0;
     }
     &__img {
       margin: 4px;
@@ -221,12 +222,21 @@
     width: 430px;
   }
 }
-
 .buy-modal-is-hidden {
   visibility: hidden;
   opacity: 0;
 }
-
+@media (max-width: 390px) and (min-width: 319px) {
+  
+.buy-modal-inner-div{
+  overflow-y: hidden;
+  padding:3px;
+  width: 385px;
+}
+.buy-modal__submit-btn {
+  margin-bottom: 30px;
+}
+}
 @media (max-width: 320px) {
    .buy-modal-inner-div {
         width: unset;
