--- a/src/sass/components/_header-hero.scss
+++ b/src/sass/components/_header-hero.scss
@@ -241,6 +241,7 @@
       url('../images/header/elipse-t.png');
     background-position: top 100% right 50%, top 60% right 43%;
     padding: 0 32px;
+    overflow-y: hidden;
   }
   @media (min-device-pixel-ratio: 2),
   (-webkit-min-device-pixel-ratio: 2),
@@ -266,74 +267,27 @@
     padding-right: 37px;
   }
 }
-.hero{
+.hero {
   padding: 20px 0 0 0;
   align-items: center;
   overflow: hidden;
   &__title {
-  font-size: 22px;
-  line-height: 25px;
+    font-size: 22px;
+    line-height: 25px;
   }
-  &__btn {
-  font-size: 8px;
-  line-height: 10px;
+  &__link {
+    font-size: 8px;
+    line-height: 10px;
   }
   &__img {
-  display: block;
-  margin-top: 70px;
-  width: 152px;
-  width: 190px;
+    display:block;
+    margin-top: 70px;
+    width: 152px;
+    width: 190px;
   }
 }
-.info {
-    margin: 20px 0 0 0;
-    &__btn {
-      width: 18px;
-      height: 18px;
-    }
-    &__side {
-      width: 114px;
-    }
-    .no-display {
-      display: none;
-    }
-    &__img {
-      display:block;
-      width: 152px;
-      padding-bottom: 16px;
-    }
-    .header {
-      &__menu-btn {
-        display: initial;
-        margin-right: -270px;
-      }
-      &__btn-icon {
-        margin-left: 10px;
-      }
-      &__buy-btn {
-        padding-right: 37px;
-      }
-    }
-    .hero {
-      padding: 0 0 16px 0;
-      align-items: center;
-      overflow: hidden;
-      &__title {
-        font-size: 22px;
-        line-height: 25px;
-      }
-      &__link {
-        font-size: 8px;
-        line-height: 10px;
-      }
-      &__img {
-        margin-top: 70px;
-        width: 152px;
-        width: 190px;
-      }
-    }
-    .info {
-      margin: 20px 0 0 0;
+     .info {
+      margin: 0px;
       &__btn {
         width: 18px;
         height: 18px;
@@ -348,7 +302,7 @@
       }
       &__img {
         width: 152px;
-      }
+      } 
     }
     .sell-point {
       &__no {
@@ -371,7 +325,6 @@
       }
     }
   }
-}
 @media (max-width: 391px) and (min-width: 320px) {
   .header-section {
     padding: 0 16px;
