--- a/src/sass/components/_buy-now-modal.scss
+++ b/src/sass/components/_buy-now-modal.scss
@@ -230,8 +230,9 @@
   
 .buy-modal-inner-div{
   overflow-y: hidden;
-  padding:3px;
+  padding:9px;
   width: 385px;
+  padding-inline-start: 0px;
 }
 .buy-modal__submit-btn {
   margin-bottom: 30px;
@@ -248,10 +249,12 @@
         right: 0;
         border-radius: 0;
        &__grid {
+          padding-inline-start: 20px;
+          padding:20px;
           flex-direction: column;
           flex-wrap: wrap;
           justify-content: center;
-        }
+              }
         &__btn {
             top: 5px;
         }
