--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -6,7 +6,7 @@
         clip-rule="evenodd"></path>
     </svg>
   </button>
-  <button class="btn-nav btn-nav--mod raise" type="button">
+  <button class="btn-nav btn-nav--mod raise" data-modal-open type="button">
     Buy now
     <svg class="btn-nav__svg" width="4px" height="8px">
       <use href="./images/sprite.svg#icon-Vector-1"></use>
