--- a/src/sass/utils/_keyframes.scss
+++ b/src/sass/utils/_keyframes.scss
@@ -1,21 +1,3 @@
-@keyframes bounce-left {
-    0%, 25%, 45%, 65%, 85% {
-      transform: translateX(0);
-    }
-    15% {
-        transform: translateX(-20%);
-      }
-    35% {
-        transform: translateX(-10%);
-      }
-    55% {
-        transform: translateX(-5%);
-      }
-    75% {
-        transform: translateX(-2.5%);
-      }
-  }
-  
   @keyframes shake {
     10%, 90% {
       transform: translate3d(-1px, 0, 0);
@@ -34,12 +16,6 @@
     }
   }
 
-  @keyframes wave {
-    0% {transform: translateX(0);}
-    50% {transform: translateX(-25%);}
-    100% {transform: translateX(-50%);}
-}
- 
 @keyframes float {
 	0% {
 		
@@ -61,18 +37,6 @@
   }
 }
 
-// @keyframes appearance {
-// 	0% {
-// 		opacity: 0;
-// 		transform: translateX(-250px);
-// 	}
-
-// 	100% {
-// 		opacity: 1;
-// 		transform: translateX(0);
-// 	}
-// }
-
 @keyframes raise {
   0% { transform: translateY(0); }
   50% { transform: translateY(-5px); }
@@ -91,3 +55,40 @@
   }
 }
 
+// @keyframes bounce-left {
+//     0%, 25%, 45%, 65%, 85% {
+//       transform: translateX(0);
+//     }
+//     15% {
+//         transform: translateX(-20%);
+//       }
+//     35% {
+//         transform: translateX(-10%);
+//       }
+//     55% {
+//         transform: translateX(-5%);
+//       }
+//     75% {
+//         transform: translateX(-2.5%);
+//       }
+//   }
+
+
+// @keyframes appearance {
+// 	0% {
+// 		opacity: 0;
+// 		transform: translateX(-250px);
+// 	}
+
+// 	100% {
+// 		opacity: 1;
+// 		transform: translateX(0);
+// 	}
+// }
+
+//   @keyframes wave {
+//     0% {transform: translateX(0);}
+//     50% {transform: translateX(-25%);}
+//     100% {transform: translateX(-50%);}
+// }
+ 
