--- a/src/sass/components/_about-section.scss
+++ b/src/sass/components/_about-section.scss
@@ -7,6 +7,7 @@
   padding-right: 20px;
   display: flex;
   flex-direction: column;
+   
 }
 
 .name-wrapper {
@@ -22,15 +23,15 @@
   screen and (min-resolution: 192dpi),
   screen and (min-resolution: 2dppx) {
   .about__content {
-    background-image: url(../images/sectionbg1ph.png);
+    background-image: url(../images/sectionbg1ph@2x.png);
   }
 }
 
-@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
-  screen and (min-width: 1200px) and (min-resolution: 192dpi),
-  screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+@media screen and (min-width: 1280px) and (min-device-pixel-ratio: 2),
+  screen and (min-width: 1280px) and (min-resolution: 192dpi),
+  screen and (min-width: 1280px) and (min-resolution: 2dppx) {
   .about__main {
-    background-image: url(../images/sectionbg.png);
+    background-image: url(../images/sectionbg@2x.png);
   }
 }
 
@@ -129,6 +130,7 @@
   }
 }
 
+
 @media screen and (min-width: 768px) {
   .name-wrapper {
     width: 430px;
@@ -200,6 +202,7 @@
 }
 
 @media screen and (min-width: 1280px) {
+ 
   .about-section {
     padding-left: 0px;
     padding-right: 0px;
