--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -7,20 +7,20 @@
   height: 100vh;
   z-index: 100;
   display: flex;
-
   justify-content: center;
   align-items: center;
-  transition: opacity 2s $main-transition-timing-function,
-    transform 2s $main-transition-timing-function;
+  transition: opacity 300ms $main-transition-timing-function,
+  transform 300ms $main-transition-timing-function;
+  
 
   &__inner {
     position: absolute;
-    width: 528px;
-    height: 581px;
+    width: 550px;
+    height: 650px;
     background: $whiteColor;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
+    border-radius: 10%;
   }
 
   &__btn {
@@ -28,13 +28,13 @@
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
     position: absolute;
-    right: 0;
+    right: 20px;
+    top: 10px;
     margin-top: 8px;
     margin-right: 8px;
     cursor: pointer;
     width: 30px;
     height: 30px;
-
     border: none;
 
     & svg {
@@ -51,16 +51,11 @@
 
   &__title {
     font-family: 'Titan One';
-    font-style: normal;
-    font-weight: 400;
     font-size: 20px;
     line-height: 34px;
     text-align: center;
     letter-spacing: 0.04em;
-    text-transform: uppercase;
-
-    color: #ffa5ba;
-
+    color: $secondaryColor;
     padding-top: 40px;
     padding-bottom: 12px;
   }
@@ -70,9 +65,7 @@
     line-height: 66px;
     text-align: center;
     letter-spacing: 0.06em;
-    text-transform: uppercase;
-
-    color: #d41443;
+    color: $primaryColor;
   }
 }
 
@@ -87,7 +80,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 8px;
+  gap: 10px;
 
   &__item {
     font-size: 12px;
@@ -145,14 +138,6 @@
     }
   }
 
-  & input[type='checkbox']:checked + .form__checkbox {
-    background-color: $primaryColor;
-    border-color: $primaryColor;
-  }
-
-  & input[type='checkbox'] {
-    display: none;
-  }
 }
 
 .btn-nav--modal {
