--- a/src/sass/utils/_keyframes.scss
+++ b/src/sass/utils/_keyframes.scss
@@ -1,82 +1,55 @@
-@keyframes bounce-left {
-    0%, 25%, 45%, 65%, 85% {
-      transform: translateX(0);
-    }
-    15% {
-        transform: translateX(-20%);
-      }
-    35% {
-        transform: translateX(-10%);
-      }
-    55% {
-        transform: translateX(-5%);
-      }
-    75% {
-        transform: translateX(-2.5%);
-      }
-  }
-  
-  @keyframes shake {
-    10%, 90% {
-      transform: translate3d(-1px, 0, 0);
-    }
-    
-    20%, 80% {
-      transform: translate3d(2px, 0, 0);
-    }
-  
-    30%, 50%, 70% {
-      transform: translate3d(-4px, 0, 0);
-    }
-  
-    40%, 60% {
-      transform: translate3d(4px, 0, 0);
-    }
+@keyframes shake {
+  10%,
+  90% {
+    transform: translate3d(-1px, 0, 0);
   }
 
-  @keyframes wave {
-    0% {transform: translateX(0);}
-    50% {transform: translateX(-25%);}
-    100% {transform: translateX(-50%);}
+  20%,
+  80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%,
+  50%,
+  70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%,
+  60% {
+    transform: translate3d(4px, 0, 0);
+  }
 }
- 
+
 @keyframes float {
-	0% {
-		
-		transform: translatey(0px);
-	}
-	50% {
-		
-		transform: translatey(-20px);
-	}
-	100% {
-		
-		transform: translatey(0px);
-	}
+  0% {
+    transform: translatey(0px);
+  }
+  50% {
+    transform: translatey(-20px);
+  }
+  100% {
+    transform: translatey(0px);
+  }
 }
 
 @keyframes flip {
-  0%,80% {
-    transform: rotateY(360deg) 
+  0%,
+  80% {
+    transform: rotateY(360deg);
   }
 }
 
-@keyframes appearance {
-	0% {
-		opacity: 0;
-		transform: translateX(-250px);
-	}
-
-	100% {
-		opacity: 1;
-		transform: translateX(0);
-	}
-}
-
 @keyframes raise {
-  0% { transform: translateY(0); }
-  50% { transform: translateY(-5px); }
-  100% { transform: translateY(0); }
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-5px);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
 
 @keyframes roll {
@@ -91,29 +64,38 @@
   }
 }
 
-// button::before {
-//   content: '';
-//   pointer-events: none;
-//   opacity: .6;
-//   background:
-//     radial-gradient(circle at 20% 35%,  transparent 0,  transparent 2px, var(--text-color) 3px, var(--text-color) 4px, transparent 4px),
-//     radial-gradient(circle at 75% 44%, transparent 0,  transparent 2px, var(--text-color) 3px, var(--text-color) 4px, transparent 4px),
-//     radial-gradient(circle at 46% 52%, transparent 0, transparent 4px, var(--text-color) 5px, var(--text-color) 6px, transparent 6px);
+// @keyframes bounce-left {
+//     0%, 25%, 45%, 65%, 85% {
+//       transform: translateX(0);
+//     }
+//     15% {
+//         transform: translateX(-20%);
+//       }
+//     35% {
+//         transform: translateX(-10%);
+//       }
+//     55% {
+//         transform: translateX(-5%);
+//       }
+//     75% {
+//         transform: translateX(-2.5%);
+//       }
+//   }
 
-//   width: 100%;
-//   height: 300%;
-//   top: 0;
-//   left: 0;
-//   position: absolute;
-//   animation: bubbles 5s linear infinite both;
+// @keyframes appearance {
+// 	0% {
+// 		opacity: 0;
+// 		transform: translateX(-250px);
+// 	}
+
+// 	100% {
+// 		opacity: 1;
+// 		transform: translateX(0);
+// 	}
 // }
 
-// @keyframes bubbles {
-//   from {
-//     transform: translate();
-//   }
-//   to {
-//     transform: translate(0, -66.666%);
-//   }
+//   @keyframes wave {
+//     0% {transform: translateX(0);}
+//     50% {transform: translateX(-25%);}
+//     100% {transform: translateX(-50%);}
 // }
- 
