--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,7 +5,7 @@
         <li><a href="-">Home</a></li>
         <li><a href="-">About us</a></li>
         <li><a href="-">How it’s made?</a></li>
-        <li><a href="-">Our products</a></li>
+        <li><a href="-">Our product</a></li>
         <li><a href="-">Contact</a></li>
       </ul>
     </nav>
