--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1,3 +1,13 @@
+html {
+  scroll-behavior: smooth;
+}
+body {
+  letter-spacing: 0.03em;
+  font-family: 'DM Sans', sans-serif;
+  min-width: 320px;
+  cursor: default;
+}
+
 ul {
   list-style: none;
   margin: 0;
