deleted useless files

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,14 +1,60 @@
-<header class="global-header">
-  <div class="container">
-    <nav>
-      <ul>
-        <li><a href="-">Home</a></li>
-        <li><a href="-">About us</a></li>
-        <li><a href="-">How it’s made?</a></li>
-        <li><a href="-">Our product</a></li>
-        <li><a href="-">Contact</a></li>
-      </ul>
-    </nav>
-    <button type="button" class="global-header__button">Buy now</button>
-  </div>
-</header>
+<div class="hero-header-section">
+  <header class="global-header">
+    <div class="container">
+      <svg><use href="./images/icons.svg.svg#icon-logo-icecream"></use></svg>
+      <nav>
+        <ul>
+          <li><a href="-">Home</a></li>
+          <li><a href="#about">About us</a></li>
+          <li><a href="#how-it's-made">How it’s made?</a></li>
+          <li><a href="#our-product">Our product</a></li>
+          <li><a href="#contanct">Contact</a></li>
+        </ul>
+      </nav>
+      <button type="button" class="global-header__button">Buy now</button>
+    </div>
+  </header>
+  <section class="section--hero-section">
+    <ul class="hero-section__title">
+      <li>
+        <h1>ice cream made with <span>passion</span></h1>
+      </li>
+      <li><a href="#products" class="hero-section">Products</a></li>
+      <li>
+        <a href="#how-it's-made" class="hero-section_button">How it’s made?</a>
+      </li>
+    </ul>
+
+    <ul class="hero-section__description">
+      <li><img src="./images/how-its-made.jpg" alt="bottle of milk" /></li>
+      <li>
+        <p>
+          Indulge in a scoop of ice cream made with passion and treat your taste
+          buds to an unforgettable experience!
+        </p>
+      </li>
+      <li>
+        <a href="#how-it's-made"
+          ><img src="./images/hero-arrow.jpg" alt="arrow"
+        /></a>
+      </li>
+    </ul>
+    <ul class="hero-section__centres">
+      <li><p>16</p></li>
+      <li><p>cafes</p></li>
+      <li><p>23</p></li>
+      <li><p>food trucks</p></li>
+    </ul>
+    <svg height="534" width="534">
+      <ellipse cx="200" cy="200" rx="200" ry="200" style="fill: #ffa5ba" />
+    </svg>
+    <svg height="30" width="30">
+      <ellipse cx="15" cy="15" rx="15" ry="15" style="fill: #ffffff" />
+    </svg>
+    <svg height="30" width="30">
+      <ellipse cx="15" cy="15" rx="15" ry="15" style="fill: #ffffff" />
+    </svg>
+    <img src="./images/ice-cream-photo.jpg" alt="ice cream photo" />
+    <img src="./images/so-tasty-photo.jpg" alt="girl enjoying an ice cream" />
+  </section>
+</div>
