update kevin - done

--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -2,10 +2,334 @@
 
 /* MOBILE */
 @media screen and (max-width: 768px) {
+  .contacts {
+    background-image: linear-gradient(#fff 20%,#fff5f6 20%);
+    padding-top: 60px;
+    padding-bottom: 121px;
+  }
+
+  .contacts-list {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+
+    padding-bottom: 40px;
+
+    align-items: center;
+    justify-content: center;
+
+    &__item {
+      width: 224px;
+      height: 432px;
+      padding: 40px 20px;
+
+      background: #FFFFFF;
+      box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+      border-radius: 24px;
+
+      display: flex;
+      flex-direction: column;
+      gap: 32px;
+
+      &__cafe {
+        color: #fff;
+        width: 75px;
+        height: 28px;
+
+
+        background: #f0d1a5;
+        border-radius: 5px;
+        padding: 0 10px;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      &__food-truck {
+        color: #fff;
+        width: 138px;
+        height: 28px;
+
+        background: #c2e297;
+        border-radius: 5px;
+        padding: 0 10px;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      &-location {
+        border-bottom: 1px solid #e1e1e1;
+
+        &__city {
+            color: #000000;
+            margin-bottom: 8px;
+        }
+
+        &__description {
+            color: #907E82;
+            margin-bottom: 32px;
+
+            width: 176px;
+            height: 65px;
+        }
+      }
+
+      &-program {
+        border-bottom: 1px solid #e1e1e1;
+
+        &__day {
+          letter-spacing: 0.04em;
+          color: #000000;
+        }
+
+        &__hours {
+            color: #FFA5BA;
+            margin-bottom: 12px; 
+
+
+            &:last-child {
+                margin-bottom: 32px; 
+            }
+        }
+      }
+
+      &-contact {
+        display: flex;
+        flex-direction: column;
+
+        &__link {
+          color: #907E82;
+          text-decoration: none;
+          transition: color .25s cubic-bezier(.4,0,.2,1);
+
+          width: 170px;
+
+          &:hover {
+            color: #D41443;
+          }
+
+          &:last-child {
+            margin-top: 8px;
+          }
+        }
+      }
+    }
+  }
+
+  .contacts-btn {
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+
+    &__item {
+
+      &-locations {
+        color: #fff;
+        width: 200px;
+        height: 40px;
+
+
+        background: #D41342;
+        border-radius: 22px;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 12px;
+      }
+      &-franchise {
+        color: #D41342;
+        width: 200px;
+        height: 40px;
+
+        background: #fff;
+        border-radius: 22px;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 12px;
+
+        transition: background-color .25s cubic-bezier(.4,0,.2,1);
+
+        &:hover {
+          background: #ECEBEB;
+        }
+      }
+    }
+  }
 }
 
 /* TABLET */
 @media screen and (min-width: 768px) and (max-width: 1200px) {
+  .contacts {
+    background-image: linear-gradient(#fff 50%,#fff5f6 50%);
+    padding-top: 60px;
+    padding-bottom: 121px;
+  }
+
+  .contacts-list {
+    display: flex;
+    flex-direction: row;
+    gap: 32px;
+
+    padding: 0px 15px 40px 15px;
+
+    align-items: center;
+    justify-content: center;
+
+    &__item {
+      width: 224px;
+      height: 528px;
+      padding: 40px 20px;
+
+      background: #FFFFFF;
+      box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+      border-radius: 24px;
+
+      display: flex;
+      flex-direction: column;
+      gap: 64px;
+
+      &__cafe {
+        color: #fff;
+        width: 75px;
+        height: 28px;
+
+
+        background: #f0d1a5;
+        border-radius: 5px;
+        padding: 0 10px;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      &__food-truck {
+        color: #fff;
+        width: 138px;
+        height: 28px;
+
+        background: #c2e297;
+        border-radius: 5px;
+        padding: 0 10px;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      &-location {
+        border-bottom: 1px solid #e1e1e1;
+
+        &__city {
+            color: #000000;
+            margin-bottom: 8px;
+        }
+
+        &__description {
+            color: #907E82;
+            margin-bottom: 32px;
+
+            width: 176px;
+            height: 65px;
+        }
+      }
+
+      &-program {
+        border-bottom: 1px solid #e1e1e1;
+
+        &__day {
+          letter-spacing: 0.04em;
+          color: #000000;
+        }
+
+        &__hours {
+            color: #FFA5BA;
+            margin-bottom: 12px; 
+
+
+            &:last-child {
+                margin-bottom: 32px; 
+            }
+        }
+      }
+
+      &-contact {
+        display: flex;
+        flex-direction: column;
+
+        &__link {
+          color: #907E82;
+          text-decoration: none;
+          transition: color .25s cubic-bezier(.4,0,.2,1);
+
+          width: 170px;
+
+          &:hover {
+            color: #D41443;
+          }
+
+          &:last-child {
+            margin-top: 8px;
+          }
+        }
+      }
+    }
+  }
+
+  .contacts-btn {
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+
+    &__item {
+
+      &-locations {
+        color: #fff;
+        width: 200px;
+        height: 40px;
+
+
+        background: #D41342;
+        border-radius: 22px;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 12px;
+      }
+      &-franchise {
+        color: #D41342;
+        width: 200px;
+        height: 40px;
+
+        background: #fff;
+        border-radius: 22px;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 12px;
+
+        transition: background-color .25s cubic-bezier(.4,0,.2,1);
+
+        &:hover {
+          background: #ECEBEB;
+        }
+      }
+    }
+  }
 }
 
 /* DESKTOP */
