--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,10 +1,246 @@
 // GLOBAL STYLES
 /* MOBILE */
 @media screen and (max-width: 768px) {
+  .footer {
+    background-color: #fff5f6;
+
+    display: flex;
+    flex-direction: column;
+    gap: 60px;
+
+
+    a {
+      color: #D41443;
+    }
+
+    &__container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 40px;
+
+
+      &-text {
+
+        display: flex;
+        flex-direction: column;
+
+        &__title1 {
+          font-family: 'Titan One';
+          font-style: normal;
+          font-weight: 400;
+          font-size: 30px;
+          line-height: 34px;
+          letter-spacing: 0.04em;
+          text-transform: uppercase;
+
+          color: #FFA5BA;
+        }
+        &__title2 {
+          font-family: 'Titan One';
+          font-style: normal;
+          font-weight: 400;
+          font-size: 58px;
+          line-height: 66px;
+          letter-spacing: 0.06em;
+          text-transform: uppercase;
+
+          color: #D41443;
+        }
+      }
+
+      &__socials {
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
+
+        &__container {
+
+          display: flex;
+          flex-direction: row;
+          gap: 30px;
+          padding-left: 160px;
+
+          &-link {
+            text-decoration: none;
+          }
+  
+          &-icon {
+            fill: #FEA5BB;
+            transition: fill .5s cubic-bezier(.4,0,.2,1);
+
+
+            &:hover {
+              fill: #D41443;
+            }
+          }
+        }
+
+        &__contact {
+          display: flex;
+          flex-direction: row;
+
+          &__text {
+            color: #000000;
+          }
+
+          &__link {
+          }
+        }
+      }
+    }
+  
+
+    &__copyright {
+      padding: 10px 15px;
+      
+      border-top: 1px solid #E1E1E1;
+
+
+      &__text {
+        height: 26px;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        font-family: 'DM Sans';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 186%;
+        /* identical to box height, or 26px */
+
+        letter-spacing: 0.02em;
+        color: #907E82;
+      }
+    }
+
+  }
+
 }
 
 /* TABLET */
 @media screen and (min-width: 768px) and (max-width: 1200px) {
+  .footer {
+    background-color: #fff5f6;
+
+    display: flex;
+    flex-direction: column;
+    gap: 60px;
+
+    padding: 0 15px;
+
+    a {
+      color: #D41443;
+    }
+
+    &__container {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      gap: 128px;
+
+
+      &-text {
+
+        display: flex;
+        flex-direction: column;
+
+        &__title1 {
+          font-family: 'Titan One';
+          font-style: normal;
+          font-weight: 400;
+          font-size: 30px;
+          line-height: 34px;
+          letter-spacing: 0.04em;
+          text-transform: uppercase;
+
+          color: #FFA5BA;
+        }
+        &__title2 {
+          font-family: 'Titan One';
+          font-style: normal;
+          font-weight: 400;
+          font-size: 58px;
+          line-height: 66px;
+          letter-spacing: 0.06em;
+          text-transform: uppercase;
+
+          color: #D41443;
+        }
+      }
+
+      &__socials {
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
+
+        &__container {
+
+          display: flex;
+          flex-direction: row;
+          gap: 30px;
+          padding-left: 160px;
+
+          &-link {
+            text-decoration: none;
+          }
+  
+          &-icon {
+            fill: #FEA5BB;
+            transition: fill .5s cubic-bezier(.4,0,.2,1);
+
+
+            &:hover {
+              fill: #D41443;
+            }
+          }
+        }
+
+        &__contact {
+          display: flex;
+          flex-direction: row;
+
+          &__text {
+            color: #000000;
+          }
+
+          &__link {
+          }
+        }
+      }
+    }
+  
+
+    &__copyright {
+      padding: 10px 15px;
+      
+      border-top: 1px solid #E1E1E1;
+
+
+      &__text {
+        height: 26px;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        font-family: 'DM Sans';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 186%;
+        /* identical to box height, or 26px */
+
+        letter-spacing: 0.02em;
+        color: #907E82;
+      }
+    }
+
+  }
 }
 
 /* DESKTOP */
