--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -3,7 +3,7 @@
     <div class="container">
     <nav class="nav-menu">
         <a href class="logo">
-            <img src="logo-D1-min.png">
+            <img src="./images/logo-D1-min.png">
         </a>
     <ul>
         <li>
